--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   ],
   "dependencies": {
     "express": "^4.16.4",
+    "@supabase/supabase-js": "^1.28.5",
     "body-parser": ">=1.19.0",
     "cors": ">=2.8.5",
     "https": ">=1.0.0",
